# minecraft-server

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
.github/scripts/: release_notes.py
.github/workflows/: pipeline.yml
docs/: next.config.mjs  package.json
docs/content/docs/: config.mdx  docker.mdx  environment.mdx  faq.mdx  index.mdx  interpolation.mdx  merging.mdx  meta.json  platforms.mdx  plugins.mdx  scripts.mdx  sigils.mdx  templates.mdx
docs/content/docs/plugins/: curseforge.mdx  github.mdx  hangar.mdx  index.mdx  meta.json  modrinth.mdx  spiget.mdx  url.mdx
docs/src/app/: layout.tsx
docs/src/components/: mdx.tsx  search.tsx
docs/src/lib/: layout.shared.tsx  shared.ts
examples/all-server-types/: .env  docker-compose.yml
examples/velocity-network/: .env  .gitignore  docker-compose.yml
src/orchestrator/: __main__.py  cli.py  constants.py  env_interpolation.py  lockfile.py  logging.py  runner.py  semver.py
src/orchestrator/fs_orchestrator/: __init__.py  orchestrator.py  sigils.py  template_reader.py
src/orchestrator/merger/: __init__.py  conf_merger.py  engine.py  json_merger.py  properties_merger.py  sigils.py  toml_merger.py  yaml_merger.py
src/orchestrator/plugins/: __init__.py  base.py  check.py  curseforge.py  github.py  hangar.py  modrinth.py  resolver.py  spiget.py  url.py
src/orchestrator/providers/: __init__.py  base.py  paper.py  pumpkin.py  purpur.py  spigotmc.py  vanilla.py
src/orchestrator/rcon/: __init__.py  __main__.py  injector.py
src/rcon/: __main__.py
tests/: conftest.py  test_cli.py  test_env_interpolation.py
tests/test_fs_orchestrator/: test_orchestrator.py
tests/test_merger/: test_conf_merger.py  test_engine.py  test_json_merger.py  test_properties_merger.py  test_sigils.py  test_toml_merger.py  test_yaml_merger.py
tests/test_plugins/: test_resolver.py
(+6 files in other folders)
